; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_physical_planner.c_HashPartitionCount.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_physical_planner.c_HashPartitionCount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MaxRunningTasksPerNode = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double ()* @HashPartitionCount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @HashPartitionCount() #0 {
  %1 = alloca double, align 8
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  %4 = call double (...) @ActiveReadableWorkerNodeCount()
  store double %4, double* %1, align 8
  %5 = load double, double* @MaxRunningTasksPerNode, align 8
  %6 = fdiv double %5, 2.000000e+00
  store double %6, double* %2, align 8
  %7 = load double, double* %1, align 8
  %8 = load double, double* %2, align 8
  %9 = fmul double %7, %8
  %10 = call i32 @rint(double %9)
  %11 = sitofp i32 %10 to double
  store double %11, double* %3, align 8
  %12 = load double, double* %3, align 8
  ret double %12
}

declare dso_local double @ActiveReadableWorkerNodeCount(...) #1

declare dso_local i32 @rint(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
